--- a/veiculos/docker-compose.yml
+++ b/veiculos/docker-compose.yml
@@ -8,37 +8,17 @@ services:
       - "8080:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=local
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - DB_NAME=veiculos_db
-      - DB_USER=user
-      - DB_PASS=pass
-      - KAFKA_HOST=kafka
-      - KAFKA_PORT=29092
-      # Mocks (WireMock)
-      - NORMALIZATION_API_URL=http://mocks:9090
-      - F1_SOAP_URL=http://mocks:9090/ws/f1
-      - F2_REST_URL=http://mocks:9090/api/f2
-      - F3_REST_URL=http://mocks:9090/api/f3
+      - SPRING_DATA_MONGODB_URI=mongodb://user:pass@mongo-db:27017/idempotency_store?authSource=admin
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:29092
+      # Supplier URLs (Mocks via WireMock)
+      - SUPPLIERS_F1_URL=http://mocks:8080/ws/f1
+      - SUPPLIERS_F2_URL=http://mocks:8080/api/f2
+      - SUPPLIERS_F3_URL=http://mocks:8080/api/f3
     depends_on:
-      - postgres
+      - mongo-db
       - kafka
+      - zipkin
       - mocks
-    networks:
-      - desafio-net
-
-  # --- BANCO DE DADOS (PostgreSQL) ---
-  postgres:
-    image: postgres:15
-    environment:
-      - POSTGRES_DB=veiculos_db
-      - POSTGRES_USER=user
-      - POSTGRES_PASSWORD=pass
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./src/main/resources/db/migration:/docker-entrypoint-initdb.d # Para rodar scripts SQL (Flyway/Liquibase)
     networks:
       - desafio-net
 
@@ -67,13 +47,34 @@ services:
     networks:
       - desafio-net
 
+  # --- MONGODB (Idempotência) ---
+  mongo-db:
+    image: mongo:7
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=user
+      - MONGO_INITDB_ROOT_PASSWORD=pass
+      - MONGO_INITDB_DATABASE=idempotency_store
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo_data:/data/db
+    networks:
+      - desafio-net
+
+  # --- ZIPKIN (Tracing) ---
+  zipkin:
+    image: openzipkin/zipkin:latest
+    ports:
+      - "9411:9411"
+    networks:
+      - desafio-net
+
   # --- MOCKS (WireMock) ---
   mocks:
     image: wiremock/wiremock:latest
     ports:
-      - "9090:9090"
-    volumes:
-      - ./src/test/resources/wiremock:/home/wiremock # Mapeia mocks de teste
+      - "9090:8080"
+    command: ["--port", "8080"]
     networks:
       - desafio-net
 
@@ -82,4 +83,4 @@ networks:
     driver: bridge
 
 volumes:
-  postgres_data:
+  mongo_data:
