Adicionando escalabilidade e requisições defensivas... Mocks

--- a/veiculos/src/main/resources/application.properties
+++ b/veiculos/src/main/resources/application.properties
@@ -45,6 +45,32 @@ resilience4j.ratelimiter.instances.F1.limit-for-period=2
 resilience4j.ratelimiter.instances.F1.limit-refresh-period=1s
 resilience4j.ratelimiter.instances.F1.timeout-duration=50ms
 
+# Bulkhead - Isolamento de recursos por fornecedor
+# F1 (SOAP) - Limite de chamadas concorrentes
+resilience4j.bulkhead.instances.F1.max-concurrent-calls=10
+resilience4j.bulkhead.instances.F1.max-wait-duration=100ms
+
+# F2 (REST) - Limite de chamadas concorrentes
+resilience4j.bulkhead.instances.F2.max-concurrent-calls=20
+resilience4j.bulkhead.instances.F2.max-wait-duration=100ms
+
+# F3 (REST) - Limite de chamadas concorrentes
+resilience4j.bulkhead.instances.F3.max-concurrent-calls=30
+resilience4j.bulkhead.instances.F3.max-wait-duration=100ms
+
+# Thread Pool Bulkhead para operações assíncronas
+resilience4j.thread-pool-bulkhead.instances.F1.max-thread-pool-size=5
+resilience4j.thread-pool-bulkhead.instances.F1.core-thread-pool-size=2
+resilience4j.thread-pool-bulkhead.instances.F1.queue-capacity=100
+
+resilience4j.thread-pool-bulkhead.instances.F2.max-thread-pool-size=10
+resilience4j.thread-pool-bulkhead.instances.F2.core-thread-pool-size=5
+resilience4j.thread-pool-bulkhead.instances.F2.queue-capacity=100
+
+resilience4j.thread-pool-bulkhead.instances.F3.max-thread-pool-size=10
+resilience4j.thread-pool-bulkhead.instances.F3.core-thread-pool-size=5
+resilience4j.thread-pool-bulkhead.instances.F3.queue-capacity=100
+
 # Security (Exemplo)
 jwt.secret.key=ChaveSecretaMuitoLongaParaAssinaturaDeTokensHS256
 
